--- a/everload-front/src/app/components/youtube-downloads/youtube-downloads.component.css
+++ b/everload-front/src/app/components/youtube-downloads/youtube-downloads.component.css
@@ -66,3 +66,21 @@ button:hover {
 button:active {
   transform: scale(1);
 }
+.loading {
+  margin-top: 10px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 6px;
+  background: linear-gradient(to right, #3498db, #2980b9);
+  animation: progressAnimation 1s infinite ease-in-out;
+}
+
+@keyframes progressAnimation {
+  0% { width: 0%; }
+  50% { width: 50%; }
+  100% { width: 100%; }
+}
