added option search

--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -1,13 +1,22 @@
-<div class="home-container">
-  <div class="logo-container">
-    <img src="../../../assets/youtube-icon-logo-719479.png" alt="YouTube Logo" class="youtube-logo">
-    <h1 class="app-name">EverLoad</h1>
-  </div>
-  <p class="subtitle">Descarga videos y música fácilmente</p>
-  <div class="options">
-    <a routerLink="/youtube-downloads" class="button">📥 Descargar de YouTube</a>
-  </div>
-  <div class="creator-info">
-    Creado por <strong>Xián</strong> - <a href="https://github.com/xianDT01" target="_blank">GitHub</a>
-  </div>
-</div>
+<html>
+  <head>
+    <link rel="stylesheet" href="./home.component.css">
+  </head>
+  <body>
+    <div class="home-container">
+      <div class="logo-container">
+        <img src="../../../assets/youtube-icon-logo-719479.png" alt="YouTube Logo" class="youtube-logo">
+        <h1 class="app-name">EverLoad</h1>
+      </div>
+      <p class="subtitle">Descarga videos y música fácilmente</p>
+      <div class="options">
+        <a routerLink="/youtube-downloads" class="button">📥 Descargar de YouTube</a>
+      </div>
+      <div class="creator-info">
+        Creado por <strong>Xián</strong> - <a href="https://github.com/xianDT01" target="_blank">GitHub</a>
+      </div>
+    </div>
+    </body>
+   
+</html>
+
