--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -1,22 +1,24 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="./home.component.css">
-  </head>
-  <body>
-    <div class="home-container">
-      <div class="logo-container">
-        <img src="../../../assets/youtube-icon-logo-719479.png" alt="YouTube Logo" class="youtube-logo">
-        <h1 class="app-name">EverLoad</h1>
-      </div>
-      <p class="subtitle">Descarga videos y música fácilmente</p>
-      <div class="options">
-        <a routerLink="/youtube-downloads" class="button">📥 Descargar de YouTube</a>
-      </div>
-      <div class="creator-info">
-        Creado por <strong>Xián</strong> - <a href="https://github.com/xianDT01" target="_blank">GitHub</a>
-      </div>
-    </div>
-    </body>
-   
-</html>
+<div class="home-container">
+  <div class="logo-container">
+    <img src="../../../assets/youtube-icon-logo-719479.png" alt="YouTube Logo" class="youtube-logo">
+    <h1 class="app-name">{{ 'APP_NAME' | translate }}</h1>
+  </div>
+  <p class="subtitle">{{ 'SUBTITLE' | translate }}</p>
+  <div class="options">
+    <a routerLink="/youtube-downloads" class="button">{{ 'DOWNLOAD_YOUTUBE' | translate }}</a>
+  </div>
+  <div class="creator-info">
+    {{ 'CREATED_BY' | translate }} <strong>Xián</strong> - 
+    <a href="https://github.com/xianDT01" target="_blank">GitHub</a>
+  </div>
 
+  <div class="language-selector">
+    <button (click)="changeLanguage('es')">🇪🇸 Español</button>
+    <button (click)="changeLanguage('en')">🇬🇧 English</button>
+    <button (click)="changeLanguage('gl')">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Flag_of_Galicia.svg" 
+           alt="Bandera de Galicia" width="20"> Galego
+    </button>
+    
+  </div>
+</div>
