--- a/everload-front/src/app/components/youtube-downloads/youtube-downloads.component.html
+++ b/everload-front/src/app/components/youtube-downloads/youtube-downloads.component.html
@@ -1,21 +1,30 @@
-
 <div class="youtube-container">
   <header class="youtube-header">
-    <div class="logo">
-      <img src="../../../assets/youtube-icon-logo-719479.png" alt="YouTube Logo">
-      <span class="app-name">EverLoad</span>
+    <div class="left-header">
+      <div class="logo">
+        <img src="../../../assets/youtube-icon-logo-719479.png" alt="YouTube Logo">
+        <span class="app-name">{{ 'APP_NAME' | translate }}</span>
+      </div>
+      <div class="language-selector">
+        <button (click)="changeLanguage('es')">🇪🇸 Español</button>
+        <button (click)="changeLanguage('en')">🇬🇧 English</button>
+        <button (click)="changeLanguage('gl')">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Flag_of_Galicia.svg" 
+               alt="Bandera de Galicia" width="20"> Galego
+        </button>
+      </div>
     </div>
-    <button class="home-button" routerLink="/">🏠 Inicio</button>
+    <button class="home-button" routerLink="/">{{ 'HOME' | translate }}</button>
   </header>
 
   <div class="downloads-box">
-    <h2>Descargar de YouTube</h2>
+    <h2>{{ 'DOWNLOAD_YOUTUBE' | translate }}</h2>
 
     <div class="input-group">
-      <input type="text" placeholder="Pega el enlace de YouTube aquí" [(ngModel)]="videoUrl">
+      <input type="text" placeholder="{{ 'PASTE_YOUTUBE_LINK' | translate }}" [(ngModel)]="videoUrl">
     </div>
 
-    <label for="resolution">Selecciona la resolución:</label>
+    <label for="resolution">{{ 'SELECT_RESOLUTION' | translate }}</label>
     <select id="resolution" [(ngModel)]="resolution">
       <option value="144">144p</option>
       <option value="240">240p</option>
@@ -26,26 +35,29 @@
     </select>
 
     <div class="buttons">
-      <button (click)="downloadVideo()" [disabled]="isLoading">📹 Descargar Video</button>
-      <button (click)="downloadMusic()" [disabled]="isLoading">🎵 Descargar Música</button>
+      <button (click)="downloadVideo()" [disabled]="isLoading">{{ 'DOWNLOAD_VIDEO' | translate }}</button>
+      <button (click)="downloadMusic()" [disabled]="isLoading">{{ 'DOWNLOAD_MUSIC' | translate }}</button>
     </div>
 
     <div *ngIf="isLoading" class="loading">
-      <p>⏳ Descargando, por favor espera...</p>
+      <p>{{ 'LOADING' | translate }}</p>
       <div class="progress-bar"></div>
     </div>
   </div>
+
   <div class="search-box">
-    <input [(ngModel)]="searchQuery" placeholder="Buscar vídeos en YouTube">
-    <button (click)="searchVideos()">🔎 Buscar</button>
+    <input [(ngModel)]="searchQuery" placeholder="{{ 'SEARCH_PLACEHOLDER' | translate }}">
+    <button (click)="searchVideos()">{{ 'SEARCH_BUTTON' | translate }}</button>
   </div>
   
+
   <div class="results">
     <div *ngFor="let video of searchResults" class="video-result">
       <img [src]="video.snippet.thumbnails.medium.url">
-      <h3>{{video.snippet.title}}</h3>
-      <button (click)="videoUrl = 'https://youtube.com/watch?v=' + video.id.videoId">Usar este vídeo</button>
+      <h3>{{ video.snippet.title }}</h3>
+      <button (click)="videoUrl = 'https://youtube.com/watch?v=' + video.id.videoId">
+        {{ 'USE_THIS_VIDEO' | translate }}
+      </button>
     </div>
   </div>
-  
 </div>
