name error fixed

--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
     <a routerLink="/youtube-downloads" class="button">{{ 'DOWNLOAD_YOUTUBE' | translate }}</a>
   </div>
   <div class="creator-info">
-    {{ 'CREATED_BY' | translate }} <strong>Xián</strong> - 
+    {{ 'CREATED_BY' | translate }} <strong>Xián Duán Taboada</strong> - 
     <a href="https://github.com/xianDT01" target="_blank">GitHub</a>
   </div>
 
