--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -1,10 +1,12 @@
 <div class="home-container">
   <div class="logo-container">
-    <img src="../../../assets/youtube-icon-logo-719479.png" alt="YouTube Logo" class="youtube-logo">
-    <h1 class="app-name">{{ 'APP_NAME' | translate }}</h1>
+    <img src="../../../assets/EverLoad home logo.png" alt="" class="youtube-logo">
+    <link rel="icon" type="image/png" href="../../../assets/Logo App.png">
+
+   <!--  <h1 class="app-name">{{ 'APP_NAME' | translate }}</h1> -->
   </div>
 
-  <p class="subtitle">{{ 'SUBTITLE' | translate }}</p>
+ <p class="subtitle">{{ 'SUBTITLE' | translate }}</p>
 
   <div class="options">
     <a routerLink="/youtube-downloads" class="button youtube-button">
