enable HTTPS with self-signed certificate

--- a/everload-front/src/app/components/instagram-downloads/instagram-downloads.component.html
+++ b/everload-front/src/app/components/instagram-downloads/instagram-downloads.component.html
@@ -1,6 +1,6 @@
 <div class="login-split-container">
   <div class="left-panel instagram-panel">
-    <img src="../../../assets/instagram-icon.png" alt="Instagram Logo" class="left-logo" />
+    <img src="../../../assets/instagram logo black.png" alt="Instagram Logo" class="left-logo" />
   </div>
 
   <div class="right-panel">
