--- a/everload-front/src/app/components/twitter-downloads/twitter-downloads.component.css
+++ b/everload-front/src/app/components/twitter-downloads/twitter-downloads.component.css
@@ -99,3 +99,14 @@
   color: red;
   font-size: 14px;
 }
+@media (max-width: 768px) {
+  .login-split-container {
+    flex-direction: column;
+  }
+
+  .left-panel, .right-panel {
+    flex: none;
+    width: 100%;
+    height: 50vh;
+  }
+}
