--- a/everload-front/src/app/components/twitter-downloads/twitter-downloads.component.html
+++ b/everload-front/src/app/components/twitter-downloads/twitter-downloads.component.html
@@ -12,24 +12,32 @@
         [(ngModel)]="tweetUrl"
         placeholder="{{ 'PASTE_TWEET_URL' | translate }}"
         class="login-input"
+        aria-label="Tweet URL"
       />
 
-      <button class="login-button" (click)="download()" [disabled]="loading">
+      <button
+        class="login-button"
+        (click)="download()"
+        [disabled]="loading"
+        aria-label="Descargar tweet"
+      >
         <span *ngIf="!loading">{{ 'DOWNLOAD_TWITTER' | translate }}</span>
         <span *ngIf="loading">{{ 'LOADING' | translate }}...</span>
       </button>
 
-      <a routerLink="/" class="forgot-link">{{ 'HOME' | translate }}</a>
+      <a routerLink="/" class="forgot-link" aria-label="Volver al inicio">
+        {{ 'HOME' | translate }}
+      </a>
 
-      <div class="language-selector">
-        <button (click)="changeLanguage('es')">🇪🇸</button>
-        <button (click)="changeLanguage('en')">🇬🇧</button>
-        <button (click)="changeLanguage('gl')">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Flag_of_Galicia.svg" alt="Galicia" width="20" />
+      <div class="language-selector" aria-label="Selector de idioma">
+        <button (click)="changeLanguage('es')" aria-label="Cambiar a español">🇪🇸 </button>
+        <button (click)="changeLanguage('en')" aria-label="Switch to English">🇬🇧</button>
+        <button (click)="changeLanguage('gl')" aria-label="Cambiar a galego">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Flag_of_Galicia.svg" alt="Galego" width="20" />
         </button>
       </div>
 
-      <div *ngIf="error" class="error-msg">{{ error }}</div>
+      <div *ngIf="error" class="error-msg" role="alert">{{ error }}</div>
     </div>
   </div>
 </div>
