--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-container">
   <div class="logo-container">
-    <img src="../../../assets/EverLoad home logo.png" alt="" class="youtube-logo">
+    <img src="../../../assets/EverLoad home logo.png" alt="" class="everload-logo">
     <link rel="icon" type="image/png" href="../../../assets/Logo App.png">
 
    <!--  <h1 class="app-name">{{ 'APP_NAME' | translate }}</h1> -->
